tests/e2e/complex_nested_expression9.story
foo = [10, 20]
bar = foo[0] > 5 + foo[1] and foo[1]
